@@ -3854,18 +3854,18 @@ void STAT_BackEnd::swDebugBufferToFile()
 }
 
 
-#if DYNINST_MAJOR_VERSION >= 10
+#if DYNINST_MAJOR_VERSION == 10 && DYNINST_MINOR_VERSION <= 1
 tbb::concurrent_vector<Field *> *STAT_BackEnd::getComponents(Type *type)
 #else
-vector<Field *> *STAT_BackEnd::getComponents(Type *type)
+dyn_c_vector<Field *> *STAT_BackEnd::getComponents(Type *type)
 #endif
 {
     typeTypedef *tt = NULL;
     typeStruct *ts = NULL;
-#if DYNINST_MAJOR_VERSION >= 10
+#if DYNINST_MAJOR_VERSION == 10 && DYNINST_MINOR_VERSION <= 1
     tbb::concurrent_vector<Field *> *components = NULL;
 #else
-    vector<Field *> *components = NULL;
+    dyn_c_vector<Field *> *components = NULL;
 #endif
 
     tt = type->getTypedefType();
@@ -3910,10 +3910,10 @@ StatError_t STAT_BackEnd::getPythonFrameInfo(Walker *proc, const Frame &frame, c
     StatPythonOffsets_t *pythonOffsets = NULL;
     Symtab *symtab = NULL;
     Type *type = NULL;
-#if DYNINST_MAJOR_VERSION >= 10
+#if DYNINST_MAJOR_VERSION == 10 && DYNINST_MINOR_VERSION <= 1
     tbb::concurrent_vector<Field *> *components = NULL;
 #else
-    vector<Field *> *components = NULL;
+    dyn_c_vector<Field *> *components = NULL;
 #endif
     Field *field = NULL;
 #ifdef SW_VERSION_8_0_0
