@@ -1,3 +1,7 @@
+2020-08-28 Gregory L. Lee <lee218@llnl.gov>
+	STAT_BackEnd.[C,h] : Add Dyninst 10.2 support, remove Dyninst < 10 support
+	config/x_ac_boost.m4 : remove dependence on -mt version of boost libs
+
 2020-02-28 Gregory L. Lee <lee218@llnl.gov>
 	* : tag version 4.0.2
 
